# sage-GUI

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: requirements.txt
src/sagegui/: gui.py  hpc_manager.py  login.py  run.py  utils.py
src/sagegui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
